# Arb-Monitor

./: .env.example  .gitignore  README.md  pyproject.toml
perp_arb/: __init__.py  aster.py  backtest.py  binance.py  bitget.py  bybit.py  cli.py  dashboard.py  display.py  expanded_cex.py  gate.py  grvt.py  hyperliquid.py  kraken.py  lighter.py  market_data.py  models.py  nado.py  okx.py  ondo.py  paradex.py  payload.py  persistence.py  practice.py  scanner.py  scoring.py  state.py  streaming.py  variational.py  ws_adapters.py
scripts/: dashboard.sh  install_systemd_service.sh  perp-arb-dashboard.service
tests/: test_backtest.py  test_binance.py  test_bybit.py  test_cli_sources.py  test_dashboard.py  test_expanded_cex.py  test_grvt.py  test_hyperliquid.py  test_incremental.py  test_lighter.py  test_nado.py  test_okx.py  test_ondo.py  test_paradex.py  test_payload.py  test_persistence.py  test_practice.py  test_scanner.py  test_scanner_flush.py  test_scoring.py  test_stateful_scanner.py  test_variational.py  test_ws_adapters.py
